--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "@reduxjs/toolkit": "^2.6.0",
     "axios": "^1.8.1",
     "dayjs": "^1.11.13",
+    "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.2.0",
-    "react-router": "^7.2.0"
+    "react-router": "^7.2.0",
+    "sweetalert2": "^11.17.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
